View, BO, Controller Changes  2 - Quick Fix

--- a/PI-PorrtabilidadeWebOkPrrojetos.csproj
+++ b/PI-PorrtabilidadeWebOkPrrojetos.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\temRecToRec.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\img\header-bg.png" />
   </ItemGroup>
 
